// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sitemap Component AboutMe matches its Full DOM snapshot 1`] = `
<AboutMe>
  <styled.div
    edited={false}
    style={
      Object {
        "backgroundColor": "#FAFAFA",
      }
    }
  >
    <div
      className="sc-iwsKbI ketVtS"
      style={
        Object {
          "backgroundColor": "#FAFAFA",
        }
      }
    >
      <Styled(Styled(Styled(styled.div)))
        edited={false}
      >
        <Styled(Styled(styled.div))
          className="sc-fAjcbJ byigni"
          edited={false}
        >
          <Styled(styled.div)
            className="sc-fAjcbJ byigni sc-kEYyzF gfWKdx"
            edited={false}
          >
            <styled.div
              className="sc-fAjcbJ byigni sc-kEYyzF gfWKdx sc-kAzzGY jHprQs"
              edited={false}
            >
              <div
                className="sc-fAjcbJ byigni sc-kEYyzF gfWKdx sc-kAzzGY jHprQs sc-jzJRlG cjXrMI"
              >
                <p>
                  <strong>
                    About me
                  </strong>
                </p>
                <styled.button
                  edited={false}
                  onClick={[Function]}
                >
                  <button
                    className="sc-VigVT euCtwD"
                    onClick={[Function]}
                  >
                    <div>
                      Edit 
                      <styled.i
                        aria-hidden="true"
                        className="fa fa-pencil"
                      >
                        <i
                          aria-hidden="true"
                          className="fa fa-pencil sc-jTzLTM kHPWWn"
                        />
                      </styled.i>
                    </div>
                  </button>
                </styled.button>
              </div>
            </styled.div>
          </Styled(styled.div)>
        </Styled(Styled(styled.div))>
      </Styled(Styled(Styled(styled.div)))>
      <styled.div
        style={
          Object {
            "display": "block",
          }
        }
      >
        <div
          className="sc-caSCKo cLYiQA"
          style={
            Object {
              "display": "block",
            }
          }
        >
          <div>
            <div>
              <strong>
                Name
              </strong>
               
            </div>
            <p>
               
            </p>
            <div>
              <strong>
                Living in
              </strong>
            </div>
            <p />
            <div>
              <strong>
                Introduction 
              </strong>
               
              <span>
                Just a few words about me
              </span>
               
            </div>
            <p />
          </div>
        </div>
      </styled.div>
      <form
        action=""
        onSubmit={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
      >
        <Styled(styled.div)>
          <styled.div
            className="sc-gisBJw ixCwkS"
          >
            <div
              className="sc-gisBJw ixCwkS sc-iAyFgw cKYLTb"
            >
              <styled.div>
                <div
                  className="sc-hSdWYo gQlOnZ"
                >
                  <div
                    className="form-group"
                  >
                    <label>
                      <strong>
                        First Name
                      </strong>
                    </label>
                    <input
                      name="FirstName"
                      placeholder="e.g. John"
                      type="text"
                    />
                  </div>
                  <div
                    className="form-group"
                  >
                    <label>
                      <strong>
                        Last name
                      </strong>
                    </label>
                    <input
                      name="LastName"
                      placeholder="e.g. Galt"
                      type="text"
                    />
                  </div>
                </div>
              </styled.div>
              <div
                className="form-group"
              >
                <label>
                  <strong>
                    Living in
                  </strong>
                </label>
                <input
                  name="location"
                  placeholder="e.g. Warsaw, Poland"
                  type="text"
                />
              </div>
              <div
                className="form-group"
              >
                <label>
                  <strong>
                    Introduction just a few words about me
                  </strong>
                </label>
                <input
                  name="intro"
                  style={
                    Object {
                      "height": "100px",
                    }
                  }
                  type="text"
                />
              </div>
            </div>
          </styled.div>
        </Styled(styled.div)>
        <button
          className="btn btn-primary"
          type="submit"
        >
          Save
        </button>
      </form>
    </div>
  </styled.div>
</AboutMe>
`;

exports[`Sitemap Component AboutMe matches its shallow snapshot 1`] = `
<styled.div
  edited={false}
  style={
    Object {
      "backgroundColor": "#FAFAFA",
    }
  }
>
  <Styled(Styled(Styled(styled.div)))
    edited={false}
  >
    <p>
      <strong>
        About me
      </strong>
    </p>
    <styled.button
      edited={false}
      onClick={[Function]}
    >
      <div>
        Edit 
        <styled.i
          aria-hidden="true"
          className="fa fa-pencil"
        />
      </div>
    </styled.button>
  </Styled(Styled(Styled(styled.div)))>
  <styled.div
    style={
      Object {
        "display": "block",
      }
    }
  >
    <div>
      <div>
        <strong>
          Name
        </strong>
         
      </div>
      <p>
         
      </p>
      <div>
        <strong>
          Living in
        </strong>
      </div>
      <p />
      <div>
        <strong>
          Introduction 
        </strong>
         
        <span>
          Just a few words about me
        </span>
         
      </div>
      <p />
    </div>
  </styled.div>
  <form
    action=""
    onSubmit={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
  >
    <Styled(styled.div)>
      <styled.div>
        <div
          className="form-group"
        >
          <label>
            <strong>
              First Name
            </strong>
          </label>
          <input
            name="FirstName"
            placeholder="e.g. John"
            type="text"
          />
        </div>
        <div
          className="form-group"
        >
          <label>
            <strong>
              Last name
            </strong>
          </label>
          <input
            name="LastName"
            placeholder="e.g. Galt"
            type="text"
          />
        </div>
      </styled.div>
      <div
        className="form-group"
      >
        <label>
          <strong>
            Living in
          </strong>
        </label>
        <input
          name="location"
          placeholder="e.g. Warsaw, Poland"
          type="text"
        />
      </div>
      <div
        className="form-group"
      >
        <label>
          <strong>
            Introduction just a few words about me
          </strong>
        </label>
        <input
          name="intro"
          style={
            Object {
              "height": "100px",
            }
          }
          type="text"
        />
      </div>
    </Styled(styled.div)>
    <button
      className="btn btn-primary"
      type="submit"
    >
      Save
    </button>
  </form>
</styled.div>
`;
